# XTaro

./: .gitignore  CMakeLists.txt  Makefile  README.md
circuit/: _16x4sram.asc  _16x4sram.op.raw  _16x4sram.raw  _test_buffer.asc  _test_cell.asc  and2.asc  and3.asy  cell_1rw.asc  column_mux.asc  dff.asc  inv.asc  logic_control.asc  logic_control.asy  mux21.asc  nand2.asc  nand3.asc  nor2.asc  nor4.asy  row_decoder.asc  row_decoder.asy  sense_amp.asc  tri_gate.asc  tri_gate.asy  write_driver.asc
circuit/ref-openram/: _16x4sram.asc  _16x4sram.op.raw  _16x4sram.raw  and3.asc  buffer.asc  column_mux.asy  decoder38.asy  dff.asc  inv.asy  logic_control.asc  models.sp  mux21.asy  nand2.asc  nand3.asc  nand3_power.asc  nor4.asc  or2.asc  or2.asy  precharge.asc  precharge.asy  sense_amp.asy  write_driver.asy
circuit/ref-tsmc/: _16x4sram.asc  _16x4sram.op.raw  _16x4sram.raw  _test_logic_control.asc  _test_logic_control.op.raw  _test_logic_control.raw  buff_power.asc  buffer.asy  cell_1rw.asc  column_mux.asc  decoder38.asc  delay_chain.asc  dff.asc  inv.asc  inv_power.asc  inv_ppower.asc  logic_control.asc  logic_control.asy  nor3.asc  sel21.asc  sel21.asy  sense_amp.asc  write_driver.asc
compiler/: main.cpp
compiler/app/: CMakeLists.txt  main.cc  main.cpp  xtaro.cc  xtaro.hh
compiler/app/help/: helpmode.cc
compiler/app/interactive/: commandmethod.cc  interactivemode.cc  interactivextaro.cc  interactivextaro.hh
compiler/app/interpreter/: commandmethod.cc  interpretermode.cc  interpreterxtaro.cc  interpreterxtaro.hh
compiler/app/script/: scriptmode.cc  scriptxtaro.cc  scriptxtaro.hh
compiler/app/version/: versionmode.cc
compiler/app/xtaro/: helpmode.cc  interpretermode.cc  scriptmode.cc  verionmode.cc  xtaro.cc  xtaro.hh
compiler/apps/: CMakeLists.txt  main.cpp
compiler/character/: CMakeLists.txt  setuphold.cc  setuphold.hh
compiler/character/character/: charresult.hh  function.cc  function.hh  setuphold.cc  setuphold.hh
compiler/character/command/: delaymeas.cc  delaymeas.hh  meas.cc  meas.hh  voltageatmeas.cc  voltageatmeas.hh
compiler/character/function/: function.hh
compiler/character/setuphold/: setuphold.cc  setuphold.hh
compiler/character/simulator/: delaymeasurement.cc  delaymeasurement.hh  measurement.cc  measurement.hh  simulator.cc  simulator.hh  sramsimulator.cc  sramsimulator.hh  voltagemeasurement.cc
compiler/circuit/: CMakeLists.txt
compiler/circuit/base/: circuit.cc  circuit.hh  circuitenum.hh  instance.cc  instance.hh  net.cc  net.hh  port.cc  port.hh
compiler/circuit/factory/: circuitfactory.cc  circuitfactory.hh  circuitfactoryimpl.cc  circuitfactoryimpl.hh  circuittype.hh  factory.cc  factory.hh  factoryimpl.cc  factoryimpl.hh  stringfactory.cc  stringfactory.hh
compiler/circuit/module/: _template_cc.txt  _template_hh.txt  and.cc  and.hh  bank.cc  bank.hh  bitcell.cc  bitcell.hh  bitcellarray.cc  bitcellarray.hh  columnmux.cc  columnmux.hh  controllogic.cc  controllogic.hh  decoder.cc  decoder.hh  dff.cc  dff.hh  fanoutbuff.cc  fanoutbuff.hh  inputdffs.cc  inputdffs.hh  inv.cc  inv.hh  mos.cc  mos.hh  mux.cc  mux.hh  nand.cc  nand.hh  nor.cc  nor.hh  or.cc  or.hh  precharge.cc  precharge.hh  prechargearr.cc  prechargearr.hh  replicabank.cc  replicabank.hh  (+14 more)
compiler/global/: CMakeLists.txt  global.hh
compiler/global/allocator/: allocator.hh
compiler/global/config/: PVT.hh  config.cc  config.hh  option.cc  option.hh  tech.cc
compiler/global/debug/: console.cc  console.hh  debug.cc  debug.hh  exception.cc  exception.hh  log.cc  log.hh  logger.cc  logger.hh
compiler/global/exception/: msgexception.hh
compiler/global/log/: log.cc  log.hh  logger.cc  logger.hh
compiler/global/stringpool/: string.cc  string.hh  stringpool.cc  stringpool.hh
compiler/global/tech/: PVT.hh  tech.cc  tech.hh
compiler/global/util/: file.cc  file.hh  format.cc  format.hh  math.cc  math.hh  sys.cc  sys.hh  util.cc  util.hh
compiler/parse/: CMakeLists.txt
compiler/parse/gds/: gdslayout.hh  gdsparser.hh  gdsrecord.hh  gdsscanner.cc  gdsscanner.hh
compiler/parse/gds/primitive/: gdsaref.hh  gdsboundary.hh  gdsbox.hh  gdselement.hh  gdsnode.hh  gdspath.hh  gdssref.hh  gdsstructrue.hh  gdstext.hh
compiler/parse/gds/value/: gdscolrow.hh  gdselementflags.hh  gdsfonts.hh  gdsreflibs.hh  gdsstructurerans.hh  gdstimestamp.hh  gdsunits.hh  gdsvalue.hh  gdsvalues.hh  gdsxy.hh
compiler/parse/json/: json.cc  json.hh  jsonexception.hh  jsonparser.cc  jsonparser.hh  jsonscanner.cc  jsonscanner.hh  jsontoken.hh
compiler/parse/liberty/: liberty.cc  liberty.hh
compiler/parse/verilog/: verilog.cc  verilog.hh
compiler/parser/: CMakeLists.txt
compiler/parser/gds/: CMakeLists.txt  gdsrecord.hh  gdsscanner.cc  gdsscanner.hh
compiler/simulate/: CMakeLists.txt
compiler/simulate/command/: delaymeasurement.hh  measurement.cc  voltagemeasurement.hh
compiler/simulate/simulator/: simulator.cc  simulator.hh
docs/: Feature.md  Framework.md  README.md  log.md  report.md
docs/framework/: Feature.md  Framework.md
docs/framework/app/: 交互模式命令.md  命令行参数.md
docs/framework/character/: 仿真类图.drawio
docs/framework/circuit/: Bank.md  Bitcell阵列.md  CircuitFactory.md  README.md  SRAM框图.drawio  内存管理.drawio  电路类图.drawio  电路结构表示.md  译码电路.md
docs/framework/parse/: Liberty.md
docs/openram-analysis/: 00-OpenRAM执行流程.md  01-make_openram_package().md  02-parse_args().md  03-init_openram().md  04-setup_bitcell().md  05-print_banner().md  06-report_status().md  07-创建输出文件列表.md  08-sram().md  09-s.save().md  LOG.md  README.md  电路实现.drawio  电路实现.md
docs/openram-analysis/base/: delay_data.md  geometry.md  instance.md  layout.md  lef.md  pin_layout.md  ptx.md  rectangle.md  spice.md  timing_graph.md  vector.md  wire_path.md  类图.drawio  网标结构与版图构造.md  网标结构类关系图.drawio
docs/openram-analysis/characterizer/: functional.md  lib.md  lib工作流程.drawio  simulation.md  类图.drawio
docs/report/: Report.md  SRAM-Test-Summary.md  VLSI-Layout-Summary.md
docs/sram-circuit/: Bitcell读写时序测试.md  SRAM电路实现.md
docs/tsmc-analysis/: Spice文件分析.md
techs/scn4m_subm/: tech.json  tech.py
(+110 files in other folders)
